adds: reverse DNS lookup to attached client IPs (#37)
Implementation has some minor gotchas;

Lookups are done relative to nut_webgui's DNS configuration. If the NUT
server has different DNS configuration, resolved names may be incorrect.

Secondly; To avoid making an extra syscall on every poll_freq, the background task
skips name lookups if the client IP is already exists in the server state.
This could cause stale information if a client’s hostname/DNS record changes;
users will keep see the old name unless the client is disconnected and reconnected
to UPSD.
