# docs/api_specs/openapi3_spec.yaml
@@ -761,9 +761,19 @@ components:
         attached:
           type: "array"
           description: "List of IP addresses of devices attached to the UPS for power."
-          example: ["10.10.23.12", "10.10.23.13"]
           items:
-            type: "string"
+            type: "object"
+            required:
+              - "addr"
+            properties:
+              addr:
+                type: string
+                description: "Ipv4 or Ipv6 address of the attached client."
+                example: "192.168.1.10"
+              name:
+                type: string
+                description: "Optional client hostname."
+                example: "example.smdd.dev"
 
     ArrayOfDevices:
       type: array
